.labs/Local-Kubernetes/mlops/manifests/airflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow
spec:
  type: ClusterIP
  selector:
    app: airflow
  ports:
    - name: http
      port: 8080
      targetPort: 8080
