.labs/Local-Kubernetes/mlops/manifests/airflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
spec:
  ingressClassName: traefik
  rules:
    - host: airflow.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow
                port:
                  number: 8080
